--- a/styles.css
+++ b/styles.css
@@ -1247,13 +1247,13 @@ section {
     }
     
     .guest-name {
-        font-size: 36px;
+        font-size: 32px;
         line-height: 1.2;
     }
     
     .invitation-greeting {
-        font-size: 22px;
-        margin-bottom: 10px;
+        font-size: 20px;
+        margin-top: 20px;
     }
     
     .invitation-text {
