Add margin-top to envelope invitation for better spacing

--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,7 @@ h1, h2, h3, h4, h5, h6 {
     bottom: 30px;
     left: 180px;
     right: 20px;
+    margin-top: 20px;
 }
 
 .envelope-greeting {
@@ -1287,6 +1288,7 @@ section {
         bottom: 25px;
         top: auto;
         position: absolute;
+        margin-top: 20px;
     }
     
     .envelope-guest {
